--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.2",
   "type": "module",
   "scripts": {
+    "clean": "rm -rf node_modules dist .vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -31,5 +32,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.6"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
